[tool.poetry]
name = "KlickbrickCLI"
version = "0.1.0"
description = "learning project form manning live project: 'Build an Extensible CLI with Python'"
authors = ["Nicolas Gandriau <nicolas.gandriau@coxautoinc.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
hello = "klickbrickcli:main"
hello2 = 'klickbrickcli.hello:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
